# gomoku

./: CMakeLists.txt  README.md  board.cpp  board.hpp  field.cpp  field.hpp  main.cpp  num_select.cpp  num_select.hpp  num_set.cpp  num_set.hpp  widget.cpp  widget.hpp
bui/: CMakeCache.txt  Makefile  cmake_install.cmake  test_graphics
